
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* removed key in cope.properties: database.oracle.varchar
* deprecated Pattern.annotationField
* rename keys in cope.properties:
	cache.limit      -> cache.item.limit
	cache.queryLimit -> cache.query.limit
* rename CopeTest.getProperties() to getConnectProperties()
	deprecated version is provided
* added CompositeField.getValueClass()
* move com.exedio.cope.util.CopeFilter to package com.exedio.cope.misc
	deprecated version is provided
* added generic creator method "newValue(SetValue...)" for Composite on CompositeField
* made generic getters and setter on Composite public
* added CompositeField.getTemplate(FunctionField)
* added CompositeField.getTemplates()
* move ConnectToken and ServletUtil to package com.exedio.cope.misc
	deprecated version is provided
* move TransactionSlicer to package com.exedio.cope.misc
	deprecated version is provided
* rename Pattern.initialize to onMount
	deprecated version is provided
* add @Computed
* add [Type|Feature].isAnnotationPresent
* allow annotations for types added by patterns
	this breaks backwards API compatibility of Type#getAnnotation(), but is likely to affect a generic backoffice only
* allow annotations for fields of types added by patterns
* allow annotations for fields added by patterns
* replace Model.isDatabaseLogEnabled/getDatabaseLogThreshold/getDatabaseLogSQL by getDatabaseListener
	replace setDatabaseLog by setDatabaseListener
	this breaks backwards API compatibility, but is likely to affect cope console only
* big overhauling of composites
	this breaks backwards API compatibility in a subtle way, BEWARE!
	- changed behaviour of optional composites,
		setter accepts null now for optional Composites and